--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <script>
         // ============ НАСТРОЙКИ ============
         const MODEL_URL = 'my-model.glb'; // должно совпадать с именем файла
-        const MODEL_NAME = 'Моя 3D модель'; // Название для отображения
+        const MODEL_NAME = 'город'; // Название для отображения
         
         // ============ ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ ============
         let scene, camera, renderer;
@@ -656,3 +656,4 @@
 </body>
 
 </html>
+
